--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -28,7 +28,7 @@ jobs:
       run: |
         SUDO_ASKPASS=/home/docker/actions-runner/password.sh
         sudo -A apt-get update
-        sudo -A apt-get -qq install libfreetype6-dev liblcms2-dev ghostscript libffi-dev libjpeg-turbo-progs cmake imagemagick
+        sudo -A apt-get -qq install libgl1 libfreetype6-dev liblcms2-dev ghostscript libffi-dev libjpeg-turbo-progs cmake imagemagick
         python -m pip install --upgrade pip
         python -m pip install pytest #flake8
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
