--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -35,10 +35,10 @@ jobs:
         python -m pip install --upgrade pip wheel
         python -m pip install pytest #flake8
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-    -name: Install VIVTESTFILES
+    -name: Install Vivisect TESTFILES
       run: |
         git clone https://github.com/vivisect/vivtestfiles.git $VIVTESTFILES
-
+        
  #   - name: Lint with flake8
  #     run: |
  #       # stop the build if there are Python syntax errors or undefined names
